# confluence-markdown

./: .codecov.yml  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  NOTICE  PR_DESCRIPTION.md  PUSH-ERROR-HANDLING-IMPLEMENTATION.md  README.md  RELEASING.md  SECURITY-PIPELINE.md  SECURITY.md  UPDATED_PR_DESCRIPTION.md  __main__.py  pyproject.toml  test.md
.cmt/: map.json
.codex/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml  security-pipeline.yml
docs/: CI-CD-AUTOMATION.md  SECURITY-PIPELINE-IMPLEMENTATION.md  confluence-setup.md  conversion-fidelity-testing.md
docs/adr/: ADR-001-adopt-atlassian-python-api.md
docs/examples/: basic-page.md  design-page.md  requirements-page.md
scripts/: DEVELOPMENT-TOOLS.md  __init__.py  bulk_publish_docs.py  common.py  confluence_publisher.py  interactive_publish.py  publish_release.py  push_core_docs.py  test_formatting.py
src/confluence_markdown/: __init__.py  __main__.py  cli.py  confluence_api.py  confluence_api_old.py  converter.py  errors.py  mapping_store.py
tests/: conftest.py  test_cli.py  test_confluence_api.py  test_confluence_publisher.py  test_conversion_fidelity.py  test_development_scripts.py  test_property_based.py  test_push_error_handling.py  test_roundtrip.py  test_smoke.py
tests/golden_corpus/expected/: code_blocks.html  headings.html  lists.html  tables.html
tests/golden_corpus/input/: code_blocks.md  headings.md  lists.md  tables.md
