[tool.poetry]
name = "confluence-markdown"
version = "0.3.0"
description = "Two-way sync between Confluence and Markdown (Git)."
authors = ["Francis Bain"]
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "confluence_markdown", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.5"
python-decouple = "^3.8"

[tool.poetry.scripts]
conmd = "confluence_markdown.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
commitizen = "^4.9.1"
yamllint = "^1.37.1"
build = "^1.3.0"
hypothesis = "^6.140.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
tag_format = "v$version"
version_scheme = "semver"
update_changelog_on_bump = true
changelog_start_rev = "v0.1.0"
version_files = [
  "pyproject.toml:^version = \"\\d+\\.\\d+\\.\\d+\"$"
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
